# tinytimmy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.py  pyproject.toml
.git-dev/hooks/: prepare-commit-msg
.github/workflows/: python-publish.yml
tests/: example.csv  test_config_parser.py  test_data_quality.py  test_tinytim.py
tests/test_yamls/: negative_test.yaml  positive_test.yaml
tinytim/: 202306-divvy-tripdata.csv  example.py  tinytim.py
tinytimmy/: config_parser.py  data_quality.py  tinytim.py
