[tool.poetry]
name = "tinytim"
version = "0.1.0"
description = "A simple and easy to use Data Quality (DQ) tool built with Python."
authors = ["Daniel Beach <dancrystalbeach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "0.18.13"
pandas = "2.0.3"
pyspark =  "3.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pyspark = "3.3.1"
delta-spark = "2.1.1"
pytest = "7.2.0"
pytest-describe = "^1.0.0"
ruff = "^0.0.254"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 150
