[tool.poetry]
name = "tinytimmy"
version = "0.1.2"
description = "A simple and easy to use Data Quality (DQ) tool built with Python."
authors = ["Daniel Beach <dancrystalbeach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "0.18.13"
pandas = "2.0.3"
pyspark =  "3.3.1"
pyarrow = "12.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-describe = "^2.1.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 150
